--- a/projects/2/courses/package.json
+++ b/projects/2/courses/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "fs": "0.0.1-security",
+    "mongoose": "^5.0.11",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
