--- a/projects/2/courses/package.json
+++ b/projects/2/courses/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.0.0",
     "fs": "0.0.1-security",
     "mongoose": "^5.0.11",
+    "npm": "^5.8.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
