--- a/projects/2/courses/package.json
+++ b/projects/2/courses/package.json
@@ -2,9 +2,11 @@
   "name": "courses",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kchambers54.github.io/full_stack/projects/2/courses",
   "dependencies": {
     "bootstrap": "^4.0.0",
     "fs": "0.0.1-security",
+    "gh-pages": "^1.1.0",
     "mongoose": "^5.0.11",
     "npm": "^5.8.0",
     "react": "^16.2.0",
@@ -16,6 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
